<resources>
    <string name="app_name">B_In_Shape</string>
    <string name="slogan">Let\'s B in Shape!</string>
    <string name="login_question"><u>Van fiókja?</u></string>
    <string name="logout"><u>Kijelentkezés</u></string>

    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login_btn">Bejelentkezés</string>
    <string name="invalid_login">Sikertelen bejelentkezés</string>

    <string name="email_message">Kérés szövege</string>
    <string name="send_email">Kérés küldése</string>
    <string name="new_request">Új gép, vagy gyakorlat felvételének kérelme</string>
    <string name="dont_edit">Az e-mail tárgyát ne szerkessze!</string>

    <string name="bodypart_text">Válasszon testrészt!</string>
    <string name="bodypart_btn1">Alsó test</string>
    <string name="bodypart_btn2">Felső test</string>
    <string name="bodypart_btn3">Has</string>

    <string name="time_text">Válasszon időtartamot!</string>
    <string name="time_btn1">60 perc</string>
    <string name="time_btn2">45 perc</string>
    <string name="time_btn3">30 perc</string>

    <string name="warmup">Bemelegítés</string>
    <string name="workout">Edzés</string>
    <string name="stretch">Nyújtás</string>
    <string name="warmup_help">Bemelegítési segítség</string>
    <string name="stretch_help">Nyújtási segítség</string>
    <string name="general_help">Segítség:</string>
    <string name="done">Kész</string>


    <string name="squat">Guggolás kettlebellel</string>
    <string name="lunge">Kitörés hátra</string>
    <string name="innerthigh">Combközelítő gép</string>
    <string name="legpcurl">Ülő combhajlító gép</string>
    <string name="pushup">Fekvőtámasz</string>
    <string name="run">Futás</string>
    <string name="well_done">Szép munka!</string>

    <string name="hsquat">jPne7KxVNqo</string>
    <string name="hlunge">60qcUAJaWBA</string>
    <string name="hinnerthigh">N7L-A7K_M1o</string>
    <string name="hlegpcurl">dEqXQRV0zSw</string>

    <string name="pain">A gyakorlatokat csak addig folytassa, míg azok kényelmesen végezhetőek! Ha fájdalmat érez azonnal hagyja abba az edzést! </string>
    <string name="responsibility">Ezen irányelv be nem tartása után keletkező esetleges károkért nem vállalunk felelősséget!</string>
    <string name="ok">Tudomásul vettem</string>
</resources>
