<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_background"
    android:orientation="vertical"
    tools:context=".TimeActivity">

    <ImageButton
        android:id="@+id/Time_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:src="@drawable/arrow_back_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/Status_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="28dp"
        android:text="Will get replaced"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/Time_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Time_tw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/time_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@color/white"
        android:textFontWeight="800"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Time_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/yellow_btn_background"
        android:text="@string/time_btn1"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time_tw" />

    <Button
        android:id="@+id/Time_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/yellow_btn_background"
        android:text="@string/time_btn2"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time_btn1" />

    <Button
        android:id="@+id/Time_btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/yellow_btn_background"
        android:text="@string/time_btn3"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time_btn2" />

</androidx.constraintlayout.widget.ConstraintLayout>